--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,22 +15,30 @@
 </head>
 
   <body>
+<section class="head">
+  <nav class= "navbar">
+  <a href="">Services</a>
+ <a href="">Product</a>
+  <a href= "">Vision</a>
+  <a href= "">Features</a>
+ <a href="">About</a>
+  <a href="">Contact</a>
+  <img. class="logo" src="img/logo.png" alt="Great Idea! Company logo">
+  </nav>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
-
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+</section>
+  <div class= "slogan">
+  <h1>
   Innovation
   On
   Demand
-
-  Get Started
-
+   </div>
+  Get Started now
+</section>
   <img src="img/header-img.png" alt="Image of a code snippet.">
+</h1>
+
+<section class= "top-content">
 
   Features
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
@@ -38,9 +46,11 @@
 
   About
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+</section>
   
+<img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+<section class="bottom-content">  
   Services
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
@@ -50,14 +60,19 @@
 
   Vision
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</section>
 
+<section class="contact">
   Contact
   123 Way 456 Street
   Somewhere, USA
   1 (888) 888-8888
   sales@greatidea.io
+</section>
 
+<footer>
   Copyright Great Idea! 2018
+</footer>
   
   </body>
 </html>
