updated css and html

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -23,50 +23,71 @@
   <a href= "">Features</a>
  <a href="">About</a>
   <a href="">Contact</a>
-  <img. class="logo" src="img/logo.png" alt="Great Idea! Company logo">
-  </nav>
 
+  <div class= great-idea>
+  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo"/>
+  </div> 
+</nav>
 </section>
-  <div class= "slogan">
+
+<section class= slogan>
+  <div class= "slogan1">
   <h1>
   Innovation
   On
   Demand
+  <button>Get Started now</button>
    </div>
-  Get Started now
-</section>
+
+   <div class="slogan2">
   <img src="img/header-img.png" alt="Image of a code snippet.">
+</div>
 </h1>
+</section>
+
+<hr>
 
 <section class= "top-content">
+ <div class= "p1">
+  <h1>
+  Features</h1>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<div class= "p2">
+ <h1> About</h1>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
 </section>
   
 <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
+
+<hr>
+
 <section class="bottom-content">  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+ <div class= "b1">
+  <h1>Services</h1>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
 
+<div class= "b2">
+  <h1>Product</h1>
+ <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+<div class= "b3">
+<h1> Vision</h1>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </section>
+</div>
 
 <section class="contact">
   Contact
-  123 Way 456 Street
+   123 Way 456 Street
   Somewhere, USA
   1 (888) 888-8888
+
   sales@greatidea.io
 </section>
 
